# SPIMpack

./: .gitignore  LICENSE  README.md  pyproject.toml
src/spimpack/: __init__.py  cli.py  io.py  models.py  qc.py  validation.py
src/spimpack/backends/: __init__.py  base.py  imaris_symlink.py  symlink.py
tests/: test_cli.py  test_qc.py  test_ui_generate.py  test_validation.py  test_writer.py
ui/: app.py  generate.py
