[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spimpack"
version = "0.1.0"
description = "SPIM dataset packaging/publishing tool with pluggable backends"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Khan Lab"}]

[project.scripts]
spimpack = "spimpack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
spimpack = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.tasks]
spimpack-ui = { cmd = ["streamlit", "run", "ui/app.py"], description = "Run SPIMpack browser-based UI." }

[tool.pixi.dependencies]
tk = ">=8.6.13,<9"
pyyaml = ">=6.0.3,<7"
pybids = ">=0.22.0,<0.23"
streamlit = ">=1.58.0,<2"
pandas = ">=3.0.3,<4"
